// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseButton > Button Types > renders reset type correctly 1`] = `
"<button type="reset" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Reset Button
</button>"
`;

exports[`BaseButton > Button Types > renders submit type correctly 1`] = `
"<button type="submit" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Submit Button
</button>"
`;

exports[`BaseButton > Complex combinations > renders danger small loading button correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner --><svg class="animate-spin -ml-1 mr-2 h-4 w-4" fill="none" viewBox="0 0 24 24">
    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
    <path class="opacity-75" fill="currentColor" d="m4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
  </svg><!-- Button Content -->Delete
</button>"
`;

exports[`BaseButton > Complex combinations > renders primary large full-width button correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Complex Button
</button>"
`;

exports[`BaseButton > Sizes > renders large size correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Large Button
</button>"
`;

exports[`BaseButton > Sizes > renders medium size correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Medium Button
</button>"
`;

exports[`BaseButton > Sizes > renders small size correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Small Button
</button>"
`;

exports[`BaseButton > States > renders disabled state correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Disabled Button
</button>"
`;

exports[`BaseButton > States > renders full width correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Full Width Button
</button>"
`;

exports[`BaseButton > States > renders loading state correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner --><svg class="animate-spin -ml-1 mr-2 h-4 w-4" fill="none" viewBox="0 0 24 24">
    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
    <path class="opacity-75" fill="currentColor" d="m4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
  </svg><!-- Button Content -->Loading Button
</button>"
`;

exports[`BaseButton > Variants > renders danger variant correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Danger Button
</button>"
`;

exports[`BaseButton > Variants > renders ghost variant correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Ghost Button
</button>"
`;

exports[`BaseButton > Variants > renders primary variant correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Primary Button
</button>"
`;

exports[`BaseButton > Variants > renders secondary variant correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Secondary Button
</button>"
`;

exports[`BaseButton > Variants > renders success variant correctly 1`] = `
"<button type="button" disabled="" class="value">
  <!-- Loading Spinner -->
  <!--v-if-->
  <!-- Button Content -->Success Button
</button>"
`;
